db user motified

--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -3,9 +3,9 @@ server.port=9000
 
 #mysql
 spring.jpa.database=mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/hshe
+spring.datasource.url=jdbc:mysql://118.89.155.40:3306/hshe
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.username=root
+spring.datasource.username=guest
 spring.datasource.password=cxt960323
 
 #redis
