修改访问控制方式；修改接口格式；TokenKey改用prop设置

--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -11,6 +11,9 @@ spring.datasource.password=cxt960323
 #redis
 spring.redis.host=localhost
 
+#token AES key
+token.skey=shawnchenshawnsk
+
 #freemarker
 #spring.freemarker.template-loader-path=classpath:/templates
 #spring.freemarker.suffix=.ftl
