修改页面数据加载

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -67,17 +67,27 @@
 		</dependency>
 
 
+        <!--静态资源热更新-->
+        <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+		</dependency>
+
+
 
 
 	</dependencies>
 
-	<build>
+
+
+    <build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+
 	</build>
 
 
