加入amqp；加入judge模块；修改Submission部分字段

--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=9000
-
+spring.application.name=core
 
 #mysql
 spring.jpa.database=mysql
@@ -10,6 +10,12 @@ spring.datasource.password=cxt960323
 
 #redis
 spring.redis.host=localhost
+
+#amqp
+spring.rabbitmq.host=118.89.155.40
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=shawn
+spring.rabbitmq.password=cxt960323
 
 #token AES key
 token.skey=shawnchenshawnsk
