--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -2,11 +2,28 @@ server.port=9000
 spring.application.name=core
 
 #mysql
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.jpa.database=mysql
-spring.datasource.url=jdbc:mysql://118.89.155.40:3306/hshe
+spring.datasource.url=jdbc:mysql://118.89.155.40:3306/hshe?allowMultiQueries=true&autoReconnect=true
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=guest
 spring.datasource.password=cxt960323
+
+# 下面为连接池的补充设置，应用到上面所有数据源中
+spring.datasource.initialSize=5
+spring.datasource.minIdle=5
+spring.datasource.maxActive=20
+# 配置获取连接等待超时的时间
+spring.datasource.maxWait=60000
+# 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
+spring.datasource.timeBetweenEvictionRunsMillis=60000
+# 配置一个连接在池中最小生存的时间，单位是毫秒
+spring.datasource.minEvictableIdleTimeMillis=300000
+spring.datasource.validationQuery=SELECT 1 FROM DUAL
+spring.datasource.testWhileIdle=true
+spring.datasource.testOnBorrow=false
+spring.datasource.testOnReturn=false
+
 
 #redis
 spring.redis.host=localhost
