判题结束结果更新；页面模板修改；增加后台页面

--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 server.port=9000
 spring.application.name=core
 
+#登录过期时间/天
+core.auth.expires=7
+
 #mysql
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.jpa.database=mysql
