--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -7,7 +7,7 @@ core.auth.expires=7
 #mysql
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.jpa.database=mysql
-spring.datasource.url=jdbc:mysql://118.89.155.40:3306/hshe?allowMultiQueries=true&autoReconnect=true
+spring.datasource.url=jdbc:mysql://118.89.155.40:3306/hshe?allowMultiQueries=true&autoReconnect=true&useUnicode=true&characterEncoding=utf-8
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=guest
 spring.datasource.password=cxt960323
