完善浏览数显示；Redis切换为远程；SimInfo数据字段增加pid；分析页面已完成未完成同学；分析页面提交分组情况

--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -29,7 +29,8 @@ spring.datasource.testOnReturn=false
 
 
 #redis
-spring.redis.host=localhost
+spring.redis.host=120.24.92.198
+spring.redis.password=cxt960323
 
 #amqp
 spring.rabbitmq.host=118.89.155.40
