移除th，页面修改；完成提交详细页

--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -48,6 +48,8 @@ token.skey=shawnchenshawnsk
 
 
 #thymeleaf start
+
+#spring.thymeleaf.mode=LEGACYHTML5
 spring.thymeleaf.mode=HTML5
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.content-type=text/html
