--- a/core/pom.xml
+++ b/core/pom.xml
@@ -55,11 +55,15 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!--thymeleaf包含了web-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
+
+		<!--<dependency>-->
+			<!--<groupId>net.sourceforge.nekohtml</groupId>-->
+			<!--<artifactId>nekohtml</artifactId>-->
+		<!--</dependency>-->
 
 		<dependency>
 			<groupId>mysql</groupId>
