--- a/sim/src/main/resources/application.properties
+++ b/sim/src/main/resources/application.properties
@@ -37,7 +37,8 @@ spring.datasource.testOnBorrow=false
 spring.datasource.testOnReturn=false
 
 #redis
-spring.redis.host=localhost
+spring.redis.host=120.24.92.198
+spring.redis.password=cxt960323
 
 #amqp
 spring.rabbitmq.host=118.89.155.40
