--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 server.port=9000
 spring.application.name=core
 
-#登录过期时间/天
+
+#login expires days
 core.auth.expires=7
 
 #mysql
@@ -12,15 +13,12 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=guest
 spring.datasource.password=cxt960323
 
-# 下面为连接池的补充设置，应用到上面所有数据源中
+
 spring.datasource.initialSize=5
 spring.datasource.minIdle=5
 spring.datasource.maxActive=20
-# 配置获取连接等待超时的时间
 spring.datasource.maxWait=60000
-# 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
 spring.datasource.timeBetweenEvictionRunsMillis=60000
-# 配置一个连接在池中最小生存的时间，单位是毫秒
 spring.datasource.minEvictableIdleTimeMillis=300000
 spring.datasource.validationQuery=SELECT 1 FROM DUAL
 spring.datasource.testWhileIdle=true
@@ -41,11 +39,3 @@ spring.rabbitmq.password=cxt960323
 #token AES key
 token.skey=shawnchenshawnsk
 
-
-#thymeleaf start
-#spring.thymeleaf.mode=LEGACYHTML5
-#spring.thymeleaf.mode=HTML5
-#spring.thymeleaf.encoding=UTF-8
-#spring.thymeleaf.content-type=text/html
-##开发时关闭缓存,不然没法看到实时页面
-#spring.thymeleaf.cache=false
