--- a/judge/src/main/resources/application.properties
+++ b/judge/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=9001
 spring.application.name=judge
 
 #sys_config
-#建议程序以低权限的用户运行,而不是使用root用户
+#recommended that the program be run as a low-privileged user instead of using the root user
 judge.sys.username=hshe
 judge.sys.password=cxt960323
 judge.sys.subs-path=/data/subs/
@@ -18,15 +18,12 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=guest
 spring.datasource.password=cxt960323
 
-# 下面为连接池的补充设置，应用到上面所有数据源中
+
 spring.datasource.initialSize=5
 spring.datasource.minIdle=5
 spring.datasource.maxActive=20
-# 配置获取连接等待超时的时间
 spring.datasource.maxWait=60000
-# 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
 spring.datasource.timeBetweenEvictionRunsMillis=60000
-# 配置一个连接在池中最小生存的时间，单位是毫秒
 spring.datasource.minEvictableIdleTimeMillis=300000
 spring.datasource.validationQuery=SELECT 1 FROM DUAL
 spring.datasource.testWhileIdle=true
