配置文件密码加密

--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -5,13 +5,15 @@ spring.application.name=core
 #login expires days
 core.auth.expires=7
 
+jasypt.encryptor.password=!uKs9e@M
+
 #mysql
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.jpa.database=mysql
 spring.datasource.url=jdbc:mysql://118.89.155.40:3306/hshe?allowMultiQueries=true&autoReconnect=true&useUnicode=true&characterEncoding=utf-8
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=guest
-spring.datasource.password=cxt960323
+spring.datasource.password=ENC(Z6a5y8f9FQHc1JGzyNBEaz8+hQmHciXd)
 
 
 spring.datasource.initialSize=5
@@ -20,7 +22,7 @@ spring.datasource.maxActive=20
 spring.datasource.maxWait=60000
 spring.datasource.timeBetweenEvictionRunsMillis=60000
 spring.datasource.minEvictableIdleTimeMillis=300000
-spring.datasource.validationQuery=SELECT 1 FROM DUAL
+spring.datasource.validationQuery=SELECT 1
 spring.datasource.testWhileIdle=true
 spring.datasource.testOnBorrow=false
 spring.datasource.testOnReturn=false
@@ -28,13 +30,13 @@ spring.datasource.testOnReturn=false
 
 #redis
 spring.redis.host=120.24.92.198
-spring.redis.password=cxt960323
+spring.redis.password=ENC(rqTVtBjjnF9tYijYxsZSvmAIK3idEqCD)
 
 #amqp
 spring.rabbitmq.host=118.89.155.40
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=shawn
-spring.rabbitmq.password=cxt960323
+spring.rabbitmq.password=ENC(8YH3e8YRu7w1HJyqf79mdGwX0ce8DcFs)
 
 #token AES key
 token.skey=shawnchenshawnsk
