--- a/judge/src/main/resources/application.properties
+++ b/judge/src/main/resources/application.properties
@@ -10,13 +10,15 @@ judge.sys.tests-path=/data/tests/
 #judge.sys.subs-path=C:\\hshe\\data\\subs\\
 #judge.sys.tests-path=C:\\hshe\\data\\tests\\
 
+jasypt.encryptor.password=KLMe9M1
+
 #mysql
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.jpa.database=mysql
 spring.datasource.url=jdbc:mysql://118.89.155.40:3306/hshe?allowMultiQueries=true&autoReconnect=true
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=guest
-spring.datasource.password=cxt960323
+spring.datasource.password=ENC(KIZvQwafYZ6pdY1ESglt6RTKnHRXuUOQ)
 
 
 spring.datasource.initialSize=5
@@ -25,17 +27,17 @@ spring.datasource.maxActive=20
 spring.datasource.maxWait=60000
 spring.datasource.timeBetweenEvictionRunsMillis=60000
 spring.datasource.minEvictableIdleTimeMillis=300000
-spring.datasource.validationQuery=SELECT 1 FROM DUAL
+spring.datasource.validationQuery=SELECT 1
 spring.datasource.testWhileIdle=true
 spring.datasource.testOnBorrow=false
 spring.datasource.testOnReturn=false
 
 #redis
 spring.redis.host=120.24.92.198
-spring.redis.password=cxt960323
+spring.redis.password=ENC(xHnrD54+trb3UcHFnKc0vPhaajGAH8Ty)
 
 #amqp
 spring.rabbitmq.host=118.89.155.40
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=shawn
-spring.rabbitmq.password=cxt960323
+spring.rabbitmq.password=ENC(QAFT+KgvW8yufZ//TSihxVy0e6E9d8Hy)
