--- a/sim/src/main/resources/application.properties
+++ b/sim/src/main/resources/application.properties
@@ -10,13 +10,15 @@ judge.sys.tests-path=/data/tests/
 #judge.sys.subs-path=C:\\hshe\\data\\subs\\
 #judge.sys.tests-path=C:\\hshe\\data\\tests\\
 
+jasypt.encryptor.password=yUm9afD
+
 #mysql
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.jpa.database=mysql
 spring.datasource.url=jdbc:mysql://118.89.155.40:3306/hshe?allowMultiQueries=true&autoReconnect=true
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=guest
-spring.datasource.password=cxt960323
+spring.datasource.password=ENC(MnzixuTCJsyMpNRYGw6+JaKAtzwbipMe)
 
 spring.datasource.initialSize=5
 spring.datasource.minIdle=5
@@ -24,17 +26,17 @@ spring.datasource.maxActive=20
 spring.datasource.maxWait=60000
 spring.datasource.timeBetweenEvictionRunsMillis=60000
 spring.datasource.minEvictableIdleTimeMillis=300000
-spring.datasource.validationQuery=SELECT 1 FROM DUAL
+spring.datasource.validationQuery=SELECT 1
 spring.datasource.testWhileIdle=true
 spring.datasource.testOnBorrow=false
 spring.datasource.testOnReturn=false
 
 #redis
 spring.redis.host=120.24.92.198
-spring.redis.password=cxt960323
+spring.redis.password=ENC(i3EYxf8pSVcZS4Jv5yhEzj8PQ3aF453P)
 
 #amqp
 spring.rabbitmq.host=118.89.155.40
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=shawn
-spring.rabbitmq.password=cxt960323
+spring.rabbitmq.password=ENC(0uxlBrLMs9rZFUdiJ1K6HpoEue/KxXV4)
