--- a/core/pom.xml
+++ b/core/pom.xml
@@ -77,6 +77,12 @@
 			<artifactId>spring-boot-starter-amqp</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>com.github.ulisesbocchio</groupId>
+			<artifactId>jasypt-spring-boot-starter</artifactId>
+			<version>2.0.0</version>
+		</dependency>
+
 
         <!--静态资源热更新-->
         <dependency>
