--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -1,19 +1,16 @@
 server.port=9000
 spring.application.name=core
 
-
 #login expires days
-core.auth.expires=7
-
-jasypt.encryptor.password=!uKs9e@M
+core.auth.expires=${AUTH_EXPIRES_DAY}
 
 #mysql
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.jpa.database=mysql
-spring.datasource.url=jdbc:mysql://118.89.155.40:3306/hshe?allowMultiQueries=true&autoReconnect=true&useUnicode=true&characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://db:3306/hshe?allowMultiQueries=true&autoReconnect=true&useUnicode=true&characterEncoding=utf-8
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=guest
-spring.datasource.password=ENC(Z6a5y8f9FQHc1JGzyNBEaz8+hQmHciXd)
+spring.datasource.password=123456
 
 
 spring.datasource.initialSize=5
@@ -29,15 +26,15 @@ spring.datasource.testOnReturn=false
 
 
 #redis
-spring.redis.host=120.24.92.198
-spring.redis.password=ENC(rqTVtBjjnF9tYijYxsZSvmAIK3idEqCD)
+spring.redis.host=rds
+spring.redis.password=123456
 
 #amqp
-spring.rabbitmq.host=118.89.155.40
+spring.rabbitmq.host=amqp
 spring.rabbitmq.port=5672
-spring.rabbitmq.username=shawn
-spring.rabbitmq.password=ENC(8YH3e8YRu7w1HJyqf79mdGwX0ce8DcFs)
+spring.rabbitmq.username=hshe
+spring.rabbitmq.password=123456
 
 #token AES key
-token.skey=shawnchenshawnsk
+token.skey=${TOKEN_SECRET_KEY}
 
