--- a/judge/src/main/resources/application.properties
+++ b/judge/src/main/resources/application.properties
@@ -4,21 +4,19 @@ spring.application.name=judge
 #sys_config
 #recommended that the program be run as a low-privileged user instead of using the root user
 judge.sys.username=hshe
-judge.sys.password=cxt960323
+judge.sys.password=hshepasswd
 judge.sys.subs-path=/data/subs/
 judge.sys.tests-path=/data/tests/
 #judge.sys.subs-path=C:\\hshe\\data\\subs\\
 #judge.sys.tests-path=C:\\hshe\\data\\tests\\
 
-jasypt.encryptor.password=KLMe9M1
-
 #mysql
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.jpa.database=mysql
-spring.datasource.url=jdbc:mysql://118.89.155.40:3306/hshe?allowMultiQueries=true&autoReconnect=true
+spring.datasource.url=jdbc:mysql://db:3306/hshe?allowMultiQueries=true&autoReconnect=true
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=guest
-spring.datasource.password=ENC(KIZvQwafYZ6pdY1ESglt6RTKnHRXuUOQ)
+spring.datasource.password=123456
 
 
 spring.datasource.initialSize=5
@@ -33,11 +31,11 @@ spring.datasource.testOnBorrow=false
 spring.datasource.testOnReturn=false
 
 #redis
-spring.redis.host=120.24.92.198
-spring.redis.password=ENC(xHnrD54+trb3UcHFnKc0vPhaajGAH8Ty)
+spring.redis.host=rds
+spring.redis.password=123456
 
 #amqp
-spring.rabbitmq.host=118.89.155.40
+spring.rabbitmq.host=amqp
 spring.rabbitmq.port=5672
-spring.rabbitmq.username=shawn
-spring.rabbitmq.password=ENC(QAFT+KgvW8yufZ//TSihxVy0e6E9d8Hy)
+spring.rabbitmq.username=hshe
+spring.rabbitmq.password=123456
