--- a/sim/src/main/resources/application.properties
+++ b/sim/src/main/resources/application.properties
@@ -1,24 +1,20 @@
 server.port=9002
 spring.application.name=sim
 
-
-
 #sys_config
-sim.shell.path=/home/sim_judge.sh
+sim.shell.path=/usr/local/bin/sim_judge.sh
 judge.sys.subs-path=/data/subs/
 judge.sys.tests-path=/data/tests/
 #judge.sys.subs-path=C:\\hshe\\data\\subs\\
 #judge.sys.tests-path=C:\\hshe\\data\\tests\\
 
-jasypt.encryptor.password=yUm9afD
-
 #mysql
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.jpa.database=mysql
-spring.datasource.url=jdbc:mysql://118.89.155.40:3306/hshe?allowMultiQueries=true&autoReconnect=true
+spring.datasource.url=jdbc:mysql://db:3306/hshe?allowMultiQueries=true&autoReconnect=true
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=guest
-spring.datasource.password=ENC(MnzixuTCJsyMpNRYGw6+JaKAtzwbipMe)
+spring.datasource.password=123456
 
 spring.datasource.initialSize=5
 spring.datasource.minIdle=5
@@ -32,11 +28,11 @@ spring.datasource.testOnBorrow=false
 spring.datasource.testOnReturn=false
 
 #redis
-spring.redis.host=120.24.92.198
-spring.redis.password=ENC(i3EYxf8pSVcZS4Jv5yhEzj8PQ3aF453P)
+spring.redis.host=rds
+spring.redis.password=123456
 
 #amqp
-spring.rabbitmq.host=118.89.155.40
+spring.rabbitmq.host=amqp
 spring.rabbitmq.port=5672
-spring.rabbitmq.username=shawn
-spring.rabbitmq.password=ENC(0uxlBrLMs9rZFUdiJ1K6HpoEue/KxXV4)
+spring.rabbitmq.username=hshe
+spring.rabbitmq.password=123456
