--- a/docker/web/nginx.conf
+++ b/docker/web/nginx.conf
@@ -72,7 +72,7 @@ http {
         #
         error_page   500 502 503 504  /50x.html;
         location = /50x.html {
-            root   /home/static;
+            root   /hshe/static;
         }
 
         # proxy the PHP scripts to Apache listening on 127.0.0.1:80
