--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
-dist: centos/7
+dist: bionic
 language: java
 jdk:
   - openjdk8
 
 before_install:
-  - sudo yum groupinstall 'Development Tools'
+  - sudo apt-get update
+  - sudo apt-get install build-essential
   
 script:
   - cd core/
