--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -7,10 +7,10 @@ core.auth.expires=${AUTH_EXPIRES_DAY}
 #mysql
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.jpa.database=mysql
-spring.datasource.url=jdbc:mysql://db:3306/hshe?allowMultiQueries=true&autoReconnect=true&useUnicode=true&characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://${DB_HOST}:3306/hshe?allowMultiQueries=true&autoReconnect=true&useUnicode=true&characterEncoding=utf-8
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.username=guest
-spring.datasource.password=123456
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASS}
 
 
 spring.datasource.initialSize=5
@@ -26,14 +26,14 @@ spring.datasource.testOnReturn=false
 
 
 #redis
-spring.redis.host=rds
-spring.redis.password=123456
+spring.redis.host=${RDS_HOST}
+spring.redis.password=${RDS_PASS}
 
 #amqp
-spring.rabbitmq.host=amqp
+spring.rabbitmq.host=${AMQP_HOST}
 spring.rabbitmq.port=5672
-spring.rabbitmq.username=hshe
-spring.rabbitmq.password=123456
+spring.rabbitmq.username=${AMQP_USER}
+spring.rabbitmq.password=${AMQP_PASS}
 
 #token AES key
 token.skey=${TOKEN_SECRET_KEY}
