--- a/sim/src/main/resources/application.properties
+++ b/sim/src/main/resources/application.properties
@@ -11,10 +11,10 @@ judge.sys.tests-path=/data/tests/
 #mysql
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.jpa.database=mysql
-spring.datasource.url=jdbc:mysql://db:3306/hshe?allowMultiQueries=true&autoReconnect=true
+spring.datasource.url=jdbc:mysql://${DB_HOST}:3306/hshe?allowMultiQueries=true&autoReconnect=true
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.username=guest
-spring.datasource.password=123456
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASS}
 
 spring.datasource.initialSize=5
 spring.datasource.minIdle=5
@@ -28,11 +28,11 @@ spring.datasource.testOnBorrow=false
 spring.datasource.testOnReturn=false
 
 #redis
-spring.redis.host=rds
-spring.redis.password=123456
+spring.redis.host=${RDS_HOST}
+spring.redis.password=${RDS_PASS}
 
 #amqp
-spring.rabbitmq.host=amqp
+spring.rabbitmq.host=${AMQP_HOST}
 spring.rabbitmq.port=5672
-spring.rabbitmq.username=hshe
-spring.rabbitmq.password=123456
+spring.rabbitmq.username=${AMQP_USER}
+spring.rabbitmq.password=${AMQP_PASS}
