--- a/docker/sim/Dockerfile
+++ b/docker/sim/Dockerfile
@@ -1,7 +1,7 @@
 FROM maven:3-jdk-8 as builder
 LABEL maintainer="https://github.com/shawnsky"
 
-COPY ../sim /src
+COPY sim /src/sim
 WORKDIR /src/sim
 
 # optional
@@ -16,11 +16,14 @@ RUN apt-get update \
 FROM openjdk:8-jdk-buster
 LABEL maintainer="https://github.com/shawnsky"
 
-COPY ../wait-for-it.sh /app
-COPY sim302 /usr/local
-COPY sim_judge.sh /usr/local/bin/
-COPY --from=builder /src/sim/target/sim-0.0.1-SNAPSHOT.jar /app/sim.jar
+RUN mkdir /app
 WORKDIR /app
+
+COPY docker/wait-for-it.sh .
+COPY docker/sim/sim302 /usr/local
+COPY docker/sim/sim_judge.sh /usr/local/bin/
+COPY --from=builder /src/sim/target/sim-0.0.1-SNAPSHOT.jar .
+
 EXPOSE 9002
 
-CMD wait-for-it.sh ${DB_HOST}:${DB_PORT} -- echo 'MySQL is active.' && java -jar sim.jar
+CMD ./wait-for-it.sh ${DB_HOST}:3306 -- echo 'MySQL is active.' && java -jar sim-0.0.1-SNAPSHOT.jar
