--- a/docker/judge/Dockerfile
+++ b/docker/judge/Dockerfile
@@ -5,7 +5,7 @@ COPY judge /src/judge
 WORKDIR /src/judge
 
 # optional
-RUN sed -i 's/archive.ubuntu.com/mirrors.ustc.edu.cn/g' /etc/apt/sources.list
+RUN sed -i 's/deb.debian.org/mirrors.ustc.edu.cn/g' /etc/apt/sources.list
 
 RUN apt-get update \
     && apt-get install -y build-essential \
